<resources>
    <string name="app_name">My Application</string>
    <string name="txt_num_1">Number 1</string>
    <string name="txt_num_2">Number 2</string>
    <string name="btn_ok">OK</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="toast">You just clicked the OK buttonq</string>
</resources>